--- a/BlazorTraining/wwwroot/index.html
+++ b/BlazorTraining/wwwroot/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>BlazorTraining</title>
@@ -9,7 +10,7 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="BlazorTraining.styles.css" rel="stylesheet" />
-
+    <link href="css/layout.css" rel="stylesheet" />
     <script src="_content/Telerik.UI.for.Blazor/js/telerik-blazor.js" defer></script>
     <link rel="stylesheet" href="_content/Telerik.UI.for.Blazor/css/kendo-theme-default/all.css" />
 
